Fixed bug with overlapping text
Updating the font size of the main message. Additionally, I updated
some of the UI messages to be shorter.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -66,7 +66,7 @@ label {
 
 .user-messages {
   color: $text-color;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   margin-top: 85px;
 }
